feat | quick header add

--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
             <div>Result:</div>
             <pre><code id="result"></code></pre>
         </div>
-        <ul class="items-wrapper" id="items">
-        </ul>
+        <div class="items-wrapper"> <strong>Past Scans:</strong><br />
+            <ul id="items"></ul>
+        </div>
     </div>
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
