--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         background: #777;
     }
 
+    .btn.capture {
+        background: #24efdc;
+        margin-bottom: 10px;
+    }
+
     .video-feed {
         box-shadow: 0px 3px 10px -7px #848383;
         border-radius: 5px;
@@ -83,12 +88,12 @@
     }
 
     .result-wrapper {
-        margin: 15px 0;
-        font-weight: 600;
-        display: flex;
+        margin: 10px 0;
         width: 100%;
-        justify-content: space-between;
-        align-items: center;
+        display: grid;
+        ;
+        grid-template-columns: 1fr;
+        grid-gap: 10px;
         font-size: 16px;
     }
 
@@ -107,12 +112,33 @@
         padding-bottom: 10px;
     }
 
-    .source-wrapper select {
+    .source-wrapper_select {
         border: none;
+        max-width: 400px
     }
 
     .items-wrapper {
         margin: 15px 0;
+    }
+
+    .video-wrapper {
+        position: relative;
+    }
+
+    .barcode-overlay {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        box-shadow: inset 0 0 0 5pc rgba(255, 255, 255, .65);
+        z-index: 2;
+        filter: blur(2px);
+    }
+
+    textarea {
+        width: 400px;
+        height: 250px;
     }
 </style>
 
@@ -122,16 +148,25 @@
             <button class="btn start" id="startButton">Start</button>
             <button class="btn reset" id="resetButton">Reset</button>
         </div>
-        <div>
+        <div class="video-wrapper">
             <video class="video-feed" id="video"></video>
+            <!-- <div class="barcode-overlay"></div> -->
         </div>
         <div class="source-wrapper" id="sourceSelectPanel" style="display:none">
-            <div>Change video source:</div>
-            <select id="sourceSelect" aria-label="video source select" style="max-width:400px"></select>
+            <em>Change video source:</em>
+            <select class="source-wrapper_select" id="sourceSelect" aria-label="video source select"></select>
         </div>
+        <button class="btn capture" id="cauture">Capture</button>
+        <canvas id="snapshot" width="400" height="300"></canvas>
         <div class="result-wrapper">
-            <div>Result:</div>
-            <pre><code id="result"></code></pre>
+            <div style="display:flex;width:100%; flex-direction:column;">
+                <h4>Text Result: </h4>
+                <textarea id="result"></textarea>
+            </div>
+            <div class="" style="display:flex;width:100%; flex-direction:column;">
+                <h4>Barcode:</h4>
+                <pre><code id="result2"></code></pre>
+            </div>
         </div>
         <div class="items-wrapper"> <strong>Past Scans:</strong><br />
             <ul id="items"></ul>
@@ -145,6 +180,49 @@
             crossorigin="anonymous"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/scandit-sdk@5.x"></script> -->
     <script type="text/javascript" src="https://unpkg.com/@zxing/library@latest"></script>
+    <!-- for OCR -->
+    <script src='https://unpkg.com/tesseract.js@2.1.3/dist/tesseract.min.js'></script>
+    <script>
+        function videoToText() {
+            const player = document.querySelector('#video');
+            const snapshotZone = document.getElementById("snapshot");
+            const captureButton = document.getElementById("cauture");
+            const result = document.getElementById("result");
+            captureButton.addEventListener("click", function () {
+                const context = snapshot.getContext("2d");
+                context.drawImage(player, 0, 0, snapshotZone.width, snapshotZone.height);
+                Tesseract.recognize(snapshotZone, "eng", {
+                    logger: (m) => console.log(m)
+                }).then(({
+                    data: {
+                        text
+                    }
+                }) => {
+                    console.log(result);
+                    result.textContent = text;
+                });
+            });
+        }
+        // function videoToText(src) {
+        //     // const src = 'https://tesseract.projectnaptha.com/img/eng_bw.png';
+        //     const worker = Tesseract.createWorker({
+        //         logger: m => console.log(m)
+        //     });
+        //     Tesseract.setLogging(true);
+        //     work();
+        //     async function
+        //     work() {
+        //         await worker.load();
+        //         await worker.loadLanguage('eng');
+        //         await worker.initialize('eng');
+        //         let result = await worker.detect(src);
+        //         console.log(result.data);
+        //         result = await worker.recognize(src);
+        //         console.log('Teseract Result: ', result.data);
+        //         await worker.terminate();
+        //     }
+        // }
+    </script>
     <script type="text/javascript">
         //saved items 
         var items = localStorage.getItem('items') ? JSON.parse(localStorage.getItem('items')) : [];
@@ -183,11 +261,12 @@
                     sourceSelectPanel.style.display = 'flex';
                 }
                 document.getElementById('startButton').addEventListener('click', () => {
+                    videoToText(selectedDeviceId);
                     codeReader.decodeFromVideoDevice(selectedDeviceId, 'video', (result,
                     err) => {
                         if (result) {
                             console.log(result)
-                            document.getElementById('result').textContent = result.text
+                            document.getElementById('result2').textContent = result.text
                             //Todo: check to see if within a min and same barcode and don't push
                             var index = items.findIndex((el) => {
                                 return el.barcode === result.text
